# app_spy--clang-funcSpy--bkOfGitee

./: .gitignore  .gitmodules  CMakeLists.txt  ClAsCxx.cmake  README.md  _build-release_x.sh  build-libfmt.sh  build-release.sh  build-release1.sh  build-release2.sh  build-release_0.sh  clang15_plugin.md  diff2f.sh  libfmt.cmake  libncurses.cmake  llvm15_dl_install.sh  setup--nlohmann--json.sh  setup--yhirose--cpp-httplib.sh  setupClangAsCompiler.cmake  srcFileIdDict.json  toolchain.cmake  toolchain_Clion.sh  vars_diff.cmake  填充函数地址的想法.md  错误复现【 misc.c的函数(__putstr, __putstr, extract_kernel, fortify_panic)添加的内联汇编"i"(fn)出现不该有的错误（error: invalid operand for inline asm constraint 'i'）】.md
SrcFileFuncIdGenService/: Dto.py  FFnIdGenSrv-boot.sh  GenFuncAbsLocId.py  Main.py  SFFnIdGenSrv.py  SqliteDB.py  SqliteDB_FnIdDef.py  Srv.py  Util.py  WebMain.py  fn.db.sql  sqlite_sequce__autoincrement_demo.sql  test.py  test_peewee_demo.py
SrcFileFuncIdGenService/CompiledFnEntity/: SqliteDB_FnIdDef.py  __init__.py
analyze_t_clock_tick/: funcId_01.py  tick_log_miss_funcReturn.ipynb  tick_plot__compile.ipynb
cmake_script/save_vars__cur_diff_prev/: diff2f.sh  save_vars__cur_diff_prev.cmake
doc/clang编译只能单进程 理由是 libCTk.so 中有写 文件/: clang编译只能单进程 理由是 libCTk.so 中有写 文件-并发写 文件srcFileIdDict.json 导致其错乱 而成为非法json 注意看221行 是并发写导致错乱的地方 -srcFileIdDict.json  clang编译只能单进程 理由是 libCTk.so 中有写 文件-并发写 文件srcFileIdDict.json 导致其错乱 而成为非法json，再解析非法json而报错.txt
funcIdBase/: CMakeLists.txt  funcIdBase.h  test_main.cpp
include/: CodeRefactor.h  CodeStyleChecker.h
include/CTk/: CTkAstCnsm.h  CTkVst.h  CollectIncMacro_PPCb.h  Constant.h  LocId.h  SFFnIdClient.h  SFFnIdClient_json.h  SrcFileIdAdmin.h  Util.h  Var.h
include/ClFnSpy/: ClFnSpyAstCnsm.h  ClFnSpyVst.h  Constant.h
include/CodeRefactor/: CrASTConsumer.h  CrMatcher.h
include/CodeStyleChecker/: CscASTConsumer.h  CscVisitor.h
include/nlohmann/: get.sh
lib/: CMakeLists.txt  CodeRefactor.cpp  CodeStyleChecker.cpp
lib/CTk/: CTkAstAct.cpp  CTkAstCnsm.cpp  CTkVst.cpp  CollectIncMacro_PPCb.cpp  LocId.cpp  SFFnIdClient.cpp  SrcFileIdAdmin.cpp  Util.cpp  fnEnt.gcc_asm.cpp.template
lib/ClFnSpy/: ClFnSpyAstAct.cpp  FuncDesc.cpp  SFFnIdClient.cpp  Util.cpp
lib/CodeRefactor/: CodeRefactorAddPluginAction.cpp  CrASTConsumer.cpp  CrAddPluginAction.cpp  CrMatcher.cpp
lib/CodeStyleChecker/: CSCASTAction.cpp  CodeStyleCheckerASTConsumer.cpp  CodeStyleCheckerVisitor.cpp  CscASTAction.cpp  CscASTConsumer.cpp  CscVisitor.cpp
t_clock_tick/: CMakeLists.txt  t_clock_tick.cpp  t_clock_tick.h  test_main.cpp
test/: CodeRefactor_Class.cpp
test/nlohmann--json-test/: CMakeLists.txt  nlohmann--json-test--main.cpp
test/test_clang++/: Build.sh  cpp_main_demo.cpp
tools/: CMakeLists.txt  CTkMain.cpp  ClFnSpyMain.cpp  CodeRefactorMain.cpp  CodeStyleCheckerMain.cpp
